5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1723_2498.log
== SUBMITION (2019-05-09 10:20:55) 
-- CODE:
ca = ha * a
cb = hb * b
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = int(input("insira o percentual de crescimento da cidade a:"))
b = int(input("insira o percentual de crescimento da cidade b:"))
while (ca < cb):
	ca = ha * a + ca
	cb = hb * b + cb
	ano = ano + 1
if(ca == cb)
print(ano)
	ano a = ano a + 1
-- EXECUTION TIME:
0.132916
-- ERROR:
  File "/home/codebench/codes/1723/2498/main.py", line 13
    if(ca == cb)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:20:57) 
-- CODE:
ca = ha * a
cb = hb * b
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = int(input("insira o percentual de crescimento da cidade a:"))
b = int(input("insira o percentual de crescimento da cidade b:"))
while (ca < cb):
	ca = ha * a + ca
	cb = hb * b + cb
	ano = ano + 1
if(ca == cb)
print(ano)
	ano a = ano a + 1
-- ERROR:
File "XXXX", line 13
    if(ca == cb)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:21:03) 
-- CODE:
ca = ha * a
cb = hb * b
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = int(input("insira o percentual de crescimento da cidade a:"))
b = int(input("insira o percentual de crescimento da cidade b:"))
while (ca < cb):
	ca = ha * a + ca
	cb = hb * b + cb
	ano = ano + 1
if(ca == cb):
print(ano)
	ano a = ano a + 1
-- EXECUTION TIME:
0.133803
-- ERROR:
  File "/home/codebench/codes/1723/2498/main.py", line 14
    print(ano)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:21:05) 
-- CODE:
ca = ha * a
cb = hb * b
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = int(input("insira o percentual de crescimento da cidade a:"))
b = int(input("insira o percentual de crescimento da cidade b:"))
while (ca < cb):
	ca = ha * a + ca
	cb = hb * b + cb
	ano = ano + 1
if(ca == cb):
print(ano)
	ano a = ano a + 1
-- EXECUTION TIME:
0.168794
-- ERROR:
  File "/home/codebench/codes/1723/2498/main.py", line 14
    print(ano)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:21:05) 
-- CODE:
ca = ha * a
cb = hb * b
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = int(input("insira o percentual de crescimento da cidade a:"))
b = int(input("insira o percentual de crescimento da cidade b:"))
while (ca < cb):
	ca = ha * a + ca
	cb = hb * b + cb
	ano = ano + 1
if(ca == cb):
print(ano)
	ano a = ano a + 1
-- ERROR:
File "XXXX", line 14
    print(ano)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:21:17) 
-- CODE:
ca = ha * a
cb = hb * b
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = int(input("insira o percentual de crescimento da cidade a:"))
b = int(input("insira o percentual de crescimento da cidade b:"))
while (ca < cb):
	ca = ha * a + ca
	cb = hb * b + cb
	ano = ano + 1
if(ca == cb):
	print(ano)
	ano a = ano a + 1
-- EXECUTION TIME:
0.200343
-- ERROR:
  File "/home/codebench/codes/1723/2498/main.py", line 15
    ano a = ano a + 1
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:21:18) 
-- CODE:
ca = ha * a
cb = hb * b
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = int(input("insira o percentual de crescimento da cidade a:"))
b = int(input("insira o percentual de crescimento da cidade b:"))
while (ca < cb):
	ca = ha * a + ca
	cb = hb * b + cb
	ano = ano + 1
if(ca == cb):
	print(ano)
	ano a = ano a + 1
-- EXECUTION TIME:
0.158484
-- ERROR:
  File "/home/codebench/codes/1723/2498/main.py", line 15
    ano a = ano a + 1
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:21:18) 
-- CODE:
ca = ha * a
cb = hb * b
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = int(input("insira o percentual de crescimento da cidade a:"))
b = int(input("insira o percentual de crescimento da cidade b:"))
while (ca < cb):
	ca = ha * a + ca
	cb = hb * b + cb
	ano = ano + 1
if(ca == cb):
	print(ano)
	ano a = ano a + 1
-- ERROR:
File "XXXX", line 15
    ano a = ano a + 1
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:21:26) 
-- CODE:
ca = ha * a
cb = hb * b
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = int(input("insira o percentual de crescimento da cidade a:"))
b = int(input("insira o percentual de crescimento da cidade b:"))
while (ca < cb):
	ca = ha * a + ca
	cb = hb * b + cb
	ano = ano + 1
if(ca == cb):
	print(ano)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ca = ha * a
NameError: name 'ha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:21:54) 
-- CODE:
ca = ha * a
cb = hb * b
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = int(input("insira o percentual de crescimento da cidade a:"))
b = int(input("insira o percentual de crescimento da cidade b:"))
while (ca < cb):
	ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = int(input("insira o percentual de crescimento da cidade a:"))
b = int(input("insira o percentual de crescimento da cidade b:"))
	ca = ha * a + ca
	cb = hb * b + cb
	ano = ano + 1
if(ca == cb):
	print(ano)
	
-- EXECUTION TIME:
0.144729
-- ERROR:
  File "/home/codebench/codes/1723/2498/main.py", line 14
    ca = ha * a + ca
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:21:55) 
-- CODE:
ca = ha * a
cb = hb * b
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = int(input("insira o percentual de crescimento da cidade a:"))
b = int(input("insira o percentual de crescimento da cidade b:"))
while (ca < cb):
	ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = int(input("insira o percentual de crescimento da cidade a:"))
b = int(input("insira o percentual de crescimento da cidade b:"))
	ca = ha * a + ca
	cb = hb * b + cb
	ano = ano + 1
if(ca == cb):
	print(ano)
	
-- ERROR:
File "XXXX", line 14
    ca = ha * a + ca
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:22:21) 
-- CODE:
ca = ha * a
cb = hb * b
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = int(input("insira o percentual de crescimento da cidade a:"))
b = int(input("insira o percentual de crescimento da cidade b:"))
while (ca < cb):
	ha = int(input("insira a entrada:"))
	hb = int(input("insira a entrada:"))
	a = int(input("insira o percentual de crescimento da cidade a:"))
	b = int(input("insira o percentual de crescimento da cidade b:"))
	ca = ha * a + ca
	cb = hb * b + cb
	ano = ano + 1
if(ca == cb):
	print(ano)
	
-- EXECUTION TIME:
0.145759
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2498/main.py", line 1, in <module>
    ca = ha * a
NameError: name 'ha' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:22:21) 
-- CODE:
ca = ha * a
cb = hb * b
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = int(input("insira o percentual de crescimento da cidade a:"))
b = int(input("insira o percentual de crescimento da cidade b:"))
while (ca < cb):
	ha = int(input("insira a entrada:"))
	hb = int(input("insira a entrada:"))
	a = int(input("insira o percentual de crescimento da cidade a:"))
	b = int(input("insira o percentual de crescimento da cidade b:"))
	ca = ha * a + ca
	cb = hb * b + cb
	ano = ano + 1
if(ca == cb):
	print(ano)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ca = ha * a
NameError: name 'ha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:22:44) 
-- CODE:
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = int(input("insira o percentual de crescimento da cidade a:"))
b = int(input("insira o percentual de crescimento da cidade b:"))
while (ca < cb):
	ha = int(input("insira a entrada:"))
	hb = int(input("insira a entrada:"))
	a = int(input("insira o percentual de crescimento da cidade a:"))
	b = int(input("insira o percentual de crescimento da cidade b:"))
	ca = ha * a + ca
	cb = hb * b + cb
	ano = ano + 1
if(ca == cb):
	print(ano)
	
-- EXECUTION TIME:
0.162387
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2498/main.py", line 5, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '35.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:22:44) 
-- CODE:
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = int(input("insira o percentual de crescimento da cidade a:"))
b = int(input("insira o percentual de crescimento da cidade b:"))
while (ca < cb):
	ha = int(input("insira a entrada:"))
	hb = int(input("insira a entrada:"))
	a = int(input("insira o percentual de crescimento da cidade a:"))
	b = int(input("insira o percentual de crescimento da cidade b:"))
	ca = ha * a + ca
	cb = hb * b + cb
	ano = ano + 1
if(ca == cb):
	print(ano)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '35.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:25:15) 
-- CODE:
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = float(input("insira o percentual de crescimento da cidade a:"))
b = float(input("insira o percentual de crescimento da cidade b:"))
while (ca < cb):
	ha = int(input("insira a entrada:"))
	hb = int(input("insira a entrada:"))
	a = int(input("insira o percentual de crescimento da cidade a:"))
	b = int(input("insira o percentual de crescimento da cidade b:"))
	ca = ha * a + ca
	cb = hb * b + cb
	ano = ano + 1
if(ca == cb):
	print(ano)
	
-- EXECUTION TIME:
0.160566
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2498/main.py", line 7, in <module>
    while (ca < cb):
NameError: name 'ca' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:25:15) 
-- CODE:
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = float(input("insira o percentual de crescimento da cidade a:"))
b = float(input("insira o percentual de crescimento da cidade b:"))
while (ca < cb):
	ha = int(input("insira a entrada:"))
	hb = int(input("insira a entrada:"))
	a = int(input("insira o percentual de crescimento da cidade a:"))
	b = int(input("insira o percentual de crescimento da cidade b:"))
	ca = ha * a + ca
	cb = hb * b + cb
	ano = ano + 1
if(ca == cb):
	print(ano)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while (ca < cb):
NameError: name 'ca' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:26:02) 
-- CODE:
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = float(input("insira o percentual de crescimento da cidade a:"))
b = float(input("insira o percentual de crescimento da cidade b:"))
while (ca < cb):
	ha = int(input("insira a entrada:"))
	hb = int(input("insira a entrada:"))
	a = int(input("insira o percentual de crescimento da cidade a:"))
	b = int(input("insira o percentual de crescimento da cidade b:"))
	ca = ha * a + ca
	cb = hb * b + cb
	ano = ano + 1
if(ca == cb):
	print(ano)
	print(ha)
	print(hb)
	print(a)
	print(b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while (ca < cb):
NameError: name 'ca' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:26:10) 
-- CODE:
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = float(input("insira o percentual de crescimento da cidade a:"))
b = float(input("insira o percentual de crescimento da cidade b:"))
while (ca < cb):
	ha = int(input("insira a entrada:"))
	hb = int(input("insira a entrada:"))
	a = int(input("insira o percentual de crescimento da cidade a:"))
	b = int(input("insira o percentual de crescimento da cidade b:"))
	ca = ha * a + ca
	cb = hb * b + cb
	ano = ano + 1
if(ca == cb):
	print(ano)
	print(ha)
	print(hb)
	print(a)
	print(b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while (ca < cb):
NameError: name 'ca' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:27:02) 
-- CODE:
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = float(input("insira o percentual de crescimento da cidade a:"))
b = float(input("insira o percentual de crescimento da cidade b:"))
ca = ha * a
cb = hb * b
while (ca < cb):
	ha = int(input("insira a entrada:"))
	hb = int(input("insira a entrada:"))
	a = int(input("insira o percentual de crescimento da cidade a:"))
	b = int(input("insira o percentual de crescimento da cidade b:"))
	ca = ha * a + ca
	cb = hb * b + cb
	ano = ano + 1
if(ca == cb):
	print(ano)
	print(ha)
	print(hb)
	print(a)
	print(b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while (ca < cb):
NameError: name 'ca' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:52:32) 
-- CODE:
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = float(input("insira o percentual de crescimento da cidade a:"))
b = float(input("insira o percentual de crescimento da cidade b:"))

ca = (ha * a)/100
cb = (hb * b)/100

while(ca < cb):
	ca = ha + ca
	cb = hb + cb
	ano = ano + 1
	ha = int(input("insira a entrada:"))
	hb = int(input("insira a entrada:"))
	a = float(input("insira o percentual de crescimento da cidade a:"))
	b = float(input("insira o percentual de crescimento da cidade b:"))
if(ca >= cb):
	print(ano)
-- EXECUTION TIME:
0.169862
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
0
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:

-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:52:32) 
-- CODE:
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = float(input("insira o percentual de crescimento da cidade a:"))
b = float(input("insira o percentual de crescimento da cidade b:"))

ca = (ha * a)/100
cb = (hb * b)/100

while(ca < cb):
	ca = ha + ca
	cb = hb + cb
	ano = ano + 1
	ha = int(input("insira a entrada:"))
	hb = int(input("insira a entrada:"))
	a = float(input("insira o percentual de crescimento da cidade a:"))
	b = float(input("insira o percentual de crescimento da cidade b:"))
if(ca >= cb):
	print(ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while (ca < cb):
NameError: name 'ca' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:54:00) 
-- CODE:
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = float(input("insira o percentual de crescimento da cidade a:"))
b = float(input("insira o percentual de crescimento da cidade b:"))

ca = (ha * a)/100
cb = (hb * b)/100

while(ha < hb):
	ha = ha + ca
	hb = hb + cb
	ano = ano + 1
	ha = int(input("insira a entrada:"))
	hb = int(input("insira a entrada:"))
	a = float(input("insira o percentual de crescimento da cidade a:"))
	b = float(input("insira o percentual de crescimento da cidade b:"))
if(ca >= cb):
	print(ano)
-- EXECUTION TIME:
0.200846
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2498/main.py", line 15, in <module>
    ha = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:54:00) 
-- CODE:
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = float(input("insira o percentual de crescimento da cidade a:"))
b = float(input("insira o percentual de crescimento da cidade b:"))

ca = (ha * a)/100
cb = (hb * b)/100

while(ha < hb):
	ha = ha + ca
	hb = hb + cb
	ano = ano + 1
	ha = int(input("insira a entrada:"))
	hb = int(input("insira a entrada:"))
	a = float(input("insira o percentual de crescimento da cidade a:"))
	b = float(input("insira o percentual de crescimento da cidade b:"))
if(ca >= cb):
	print(ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    ha = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:54:09) 
-- CODE:
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = float(input("insira o percentual de crescimento da cidade a:"))
b = float(input("insira o percentual de crescimento da cidade b:"))

ca = (ha * a)/100
cb = (hb * b)/100

while(ha < hb):
	ha = ha + ca
	hb = hb + cb
	ano = ano + 1
	ha = int(input("insira a entrada:"))
	hb = int(input("insira a entrada:"))
	a = float(input("insira o percentual de crescimento da cidade a:"))
	b = float(input("insira o percentual de crescimento da cidade b:"))
if(ha >= hb):
	print(ano)
-- EXECUTION TIME:
0.128496
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2498/main.py", line 15, in <module>
    ha = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:54:09) 
-- CODE:
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = float(input("insira o percentual de crescimento da cidade a:"))
b = float(input("insira o percentual de crescimento da cidade b:"))

ca = (ha * a)/100
cb = (hb * b)/100

while(ha < hb):
	ha = ha + ca
	hb = hb + cb
	ano = ano + 1
	ha = int(input("insira a entrada:"))
	hb = int(input("insira a entrada:"))
	a = float(input("insira o percentual de crescimento da cidade a:"))
	b = float(input("insira o percentual de crescimento da cidade b:"))
if(ha >= hb):
	print(ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    ha = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:54:45) 
-- CODE:
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = float(input("insira o percentual de crescimento da cidade a:"))
b = float(input("insira o percentual de crescimento da cidade b:"))

ca = (ha * a)/100
cb = (hb * b)/100

while(ha < hb):
	ha = ha + ca
	hb = hb + cb
	ano = ano + 1
	
if(ha >= hb):
	print(ano)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:58:10) 
-- CODE:
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = float(input("insira o percentual de crescimento da cidade a:"))
b = float(input("insira o percentual de crescimento da cidade b:"))

ca = (ha * a)/100
cb = (hb * b)/100

while(ha < hb):
	ha = ha + ca
	hb = hb + cb
	ano = ano + 1
	print(ano)
if(ha >= hb):
	print(ano)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:59:43) 
-- CODE:
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = float(input("insira o percentual de crescimento da cidade a:"))
b = float(input("insira o percentual de crescimento da cidade b:"))

ca = (ha * a)/100
cb = (hb * b)/100
print(ca)
print(cb)
while(ha < hb):
	ha = ha + ca
	hb = hb + cb
	ano = ano + 1
	print(ano)
if(ha >= hb):
	print(ano)
-- OUTPUT:
88803.25
60900.0
1
2
3
4
5
6
7
8
9
10
11
12
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:01:25) 
-- CODE:
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = float(input("insira o percentual de crescimento da cidade a:"))
b = float(input("insira o percentual de crescimento da cidade b:"))

ca = (ha * a)/100
cb = (hb * b)/100
print(ca)
print(cb)
while(ha < hb):
	ha = ha + ca
	hb = hb + cb
	ano = ano + 1
	print(ano)
if(ha >= hb):
	print(ano)
-- OUTPUT:
88803.25
60900.0
1
2
3
4
5
6
7
8
9
10
11
12
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:03:55) 
-- CODE:
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = float(input("insira o percentual de crescimento da cidade a:"))
b = float(input("insira o percentual de crescimento da cidade b:"))

ca = (ha * a)/100
cb = (hb * b)/100
print(ca)
print(cb)
while(ha < hb):
	ha = ha + ca
	hb = hb + cb
	ano = ano + 1
print(ano)

-- OUTPUT:
88803.25
60900.0
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:04:20) 
-- CODE:
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = float(input("insira o percentual de crescimento da cidade a:"))
b = float(input("insira o percentual de crescimento da cidade b:"))

ca = (ha * a)/100
cb = (hb * b)/100
print(ca)
print(cb)
while(ha < hb):
	ha = ha + ca
	hb = hb + cb
	ano = ano + 1
print(ano)

-- OUTPUT:
88803.25
60900.0
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:05:02) 
-- CODE:
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = float(input("insira o percentual de crescimento da cidade a:"))
b = float(input("insira o percentual de crescimento da cidade b:"))


while(ha < hb):
	ca = (ha * a)/100
	cb = (hb * b)/100
	ha = ha + ca
	hb = hb + cb
	ano = ano + 1
print(ano)

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:05:19) 
-- CODE:
ano = 0

ha = int(input("insira a entrada:"))
hb = int(input("insira a entrada:"))
a = float(input("insira o percentual de crescimento da cidade a:"))
b = float(input("insira o percentual de crescimento da cidade b:"))


while(ha < hb):
	ca = (ha * a)/100
	cb = (hb * b)/100
	ha = ha + ca
	hb = hb + cb
	ano = ano + 1
print(ano)

-- EXECUTION TIME:
0.142684
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
